# gifting-ai-recommender

./: .env.dev  LICENSE  README.md  pyproject.toml
src/: README.md  app.py  helpers.py  requirements.txt
test/: test_app.py  test_helper.py
