[tool.poetry]
name = "sampleapp-gradio"
version = "0.1.0"
description = ""
authors = ["Fadamiro Catherine <34650699+katiie@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
gradio = "^5.34.2"
openai = "^1.98.0"
pytest = "^8.4.1"
python-dotenv = "^1.1.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
watchdog = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
myapp = "src.app:app"
